--- a/overrides/autoexec.cfg
+++ b/overrides/autoexec.cfg
@@ -20,6 +20,7 @@ alias checkback none
 alias checkleft none
 alias checkright none
 alias none ""
+//analysis: This is pretty incredible, the check aliases basically check if a directiojn key has been pressed. So that when you release a direction key, it knows to immediatley move you in the opposite direction or just stay still. The check aliases get set when you press that key and get unset when you release that key
 
 
 alias "battlecry" "voicemenu 2 1";
@@ -55,6 +56,20 @@ alias toggleViewModels viewModelsOff
 alias ViewModelsOff "r_drawviewmodel 0; alias toggleViewModels ViewModelsOn"
 alias ViewModelsOn "r_drawviewmodel 1; alias toggleViewModels ViewModelsOff"
 
+//custom crouch jumps -----------------------------------------------------------------
+alias +jumpDuck "+jump; +duck"
+alias -jumpDuck "-jump; -duck"
+
+alias +jumpFunction +jumpDuck
+alias -jumpFunction -jumpDuck
+
+alias resetJumpDuck "-jump; alias +jumpFunction +jumpDuck; alias -jumpFunction -jumpDuck"
+
+alias +crouch "+duck; alias +jumpFunction +jump; alias -jumpFunction resetJumpDuck"
+alias -crouch "-duck;"
+//--------------------------------------------------------------------------------------
+
+
 
 //chat binds
 
@@ -67,65 +82,45 @@ alias ViewModelsOn "r_drawviewmodel 1; alias toggleViewModels ViewModelsOff"
 bind c voice_menu_3
 bind w "slot3"
 
-//now in reset.cfg (remove here when familiar with new location)
-//bind shift +toggleState
-//alias +toggleState "alias nice_aim nice_shot; alias call call_help; alias thank good_work"
-//alias -toggleState "alias nice_aim nice_arrow; alias call call_medic; alias thank thanks"
-
-//bind y nice_aim
-//alias nice_aim nice_arrow
-//alias nice_arrow "say nice arrow!"
-//alias nice_shot "voicemenu 2 6"
-
-//bind e call
-//alias call call_medic
-//alias call_medic "voicemenu 0 0"
-//alias call_help "voicemenu 2 0"
-//alias call_ubercharge "voicemenu 1 6"
-
-//bind g thank
-//alias thank thanks
-//alias thanks "voicemenu 0 1"
-//alias good_work "voicemenu 2 7"
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+alias "myServerPass" "wafflesreignsupreme"
+alias "myServer" "connect 169.254.4.215:7120; password "wafflesreignsupreme""
+alias "rconPass" "rcon_password pancakesreignsupreme"
 
 
 alias pboys "connect 74.91.119.87:27015; password yoyoyo"
 alias "c2w" "connect ctap.game.nfoservers.com:27015; password seedy"
-alias "rconPass" "rcon_password tecolote13"
+alias "c2wrconPass" "rcon_password tecolote13"
+
+
+alias "myserverPass" "password wafflesreignsupreme"
 
 alias rconSnake "rcon changelevel cp_snakewater_final1"
 alias rconBagel "rcon changelevel koth_bagel_rc5"
 alias rconClearcut "rcon changelevel koth_clearcut_b15d"
-alias rconProcess "rcon changelevel cp_process_f9a"
+alias rconProcess "rcon changelevel cp_process_f11"
 alias rconSunshine "rcon changelevel cp_sunshine"
 alias rconReckoner "rcon changelevel cp_reckoner_rc6"
-alias rconMetal "rcon changelevel cp_metalworks_f2"
-alias rconGully "rcon changelevel cp_gullywash_f6"
+alias rconMetal "rcon changelevel cp_metalworks_f4"
+alias rconGully "rcon changelevel cp_gullywash_f9"
 alias rconGranary "rcon changelevel cp_granary_pro_rc2"
 alias rconProduct "rcon changelevel koth_product_final"
 alias rconMge "rcon changelevel mge_training_v8_beta4b"
 alias rconMge2 "rcon changelevel mge_oihguv_sucks_a12"
 alias rconMge3 "rcon changelevel mge_oihguv_sucks_b5"
+
+alias !rconSnake "say !rcon changelevel cp_snakewater_final1"
+alias !rconBagel "say !rcon changelevel koth_bagel_rc5"
+alias !rconClearcut "say !rcon changelevel koth_clearcut_b15d"
+alias !rconProcess "say !rcon changelevel cp_process_f11"
+alias !rconSunshine "say !rcon changelevel cp_sunshine"
+alias !rconReckoner "say !rcon changelevel cp_reckoner_rc6"
+alias !rconMetal "say !rcon changelevel cp_metalworks_f4"
+alias !rconGully "say !rcon changelevel cp_gullywash_f9"
+alias !rconGranary "say !rcon changelevel cp_granary_pro_rc2"
+alias !rconProduct "say !rcon changelevel koth_product_final"
+alias !rconMge "say !rcon changelevel mge_training_v8_beta4b"
+alias !rconMge2 "say !rcon changelevel mge_oihguv_sucks_a12"
+alias !rconMge3 "say !rcon changelevel mge_oihguv_sucks_b5"
 
 
 alias scrim "rcon exec rgl_6s_5cp_scrim"
@@ -133,6 +128,12 @@ alias match1 "rcon exec rgl_6s_5cp_match_half1"
 alias match2 "rcon exec rgl_6s_5cp_match_half2"
 alias match3 "rcon exec rgl_6s_5cp_gc"
 alias koth "rcon exec rgl_6s_koth"
+
+alias !scrim "say !rcon exec rgl_6s_5cp_scrim"
+alias !match1 "say !rcon exec rgl_6s_5cp_match_half1"
+alias !match2 "say !rcon exec rgl_6s_5cp_match_half2"
+alias !match3 "say !rcon exec rgl_6s_5cp_gc"
+alias !koth "say !rcon exec rgl_6s_koth"
 
 alias win1 "rcon mp_winlimit 1"
 alias win2 "rcon mp_winlimit 2"
@@ -146,6 +147,12 @@ alias win9 "rcon mp_winlimit 9"
 alias win10 "rcon mp_winlimit 10"
 alias win11 "rcon mp_winlimit 11"
 alias win12 "rcon mp_winlimit 12"
+
+alias !win1 "say !rcon mp_winlimit 1"
+alias !win2 "say !rcon mp_winlimit 2"
+alias !win3 "say !rcon mp_winlimit 3"
+alias !win4 "say !rcon mp_winlimit 4"
+alias !win5 "say !rcon mp_winlimit 5"
 
 alias time5 "rcon mp_timelimit 5"
 alias time6 "rcon mp_timelimit 6"
@@ -176,23 +183,29 @@ alias time50 "rcon mp_timelimit 50"
 alias time55 "rcon mp_timelimit 55"
 alias time60 "rcon mp_timelimit 60"
 
+alias !time5 "say !rcon mp_timelimit 5"
+alias !time10 "say !rcon mp_timelimit 10"
+alias !time15 "say !rcon mp_timelimit 15"
+alias !time20 "say !rcon mp_timelimit 20"
+
 
 
 alias snake "map cp_snakewater_final1"
 alias bagel "map koth_bagel_rc5"
 alias clearcut "map koth_clearcut_b15d"
 alias product "map koth_product_final"
-alias process "map cp_process_f9a"
+alias process "map cp_process_f11"
 alias sunshine "map cp_sunshine"
 alias reckoner "map cp_reckoner_rc6"
-alias metal "map cp_metalworks_f2"
-alias gully "map cp_gullywash_f6"
+alias metal "map cp_metalworks_f4"
+alias gully "map cp_gullywash_f9"
 alias granary "map cp_granary_pro_rc2"
 
 //bind "ctrl" "load_itempreset 0" og resup bind
 bind b prec_mark
 bind "o" "explode"
 bind "l" "mp_tournament 1; sv_allow_wait_command 1; sv_cheats 1; net_fakelag 25; mp_restartgame_immediate 1; wait 900; hurtme -180"
+alias "fixSound" "snd_soundmixer Default_Mix"
 
 
 
