--- a/overrides/reset.cfg
+++ b/overrides/reset.cfg
@@ -5,12 +5,16 @@ bind "3" "slot3"
 bind w "slot3"
 bind "e" "voicemenu 0 0"
 bind "v" "+voicerecord"
-bind "space" "+jump"
+bind MOUSE5 +crouch
+bind "space" "+jumpFunction"
 hud_combattext_batching 0
 
 alias batchDamage "slot2;
 alias unbatchDamage "slot1;
 bind "MWHEELUP" unbatchDamage
 bind "MWHEELDOWN" batchDamage
+
+alias toggleFriendlyDisguise enemyDisguises
+cl_hud_playerclass_use_playermodel 0
 
 exec overrides/toggleStates/toggleStateParams
