--- a/overrides/toggleStates/spyState1.cfg
+++ b/overrides/toggleStates/spyState1.cfg
@@ -1,9 +1,9 @@
 //debugging: say "switching to spy loadout 1 config"
 
 bind "MWHEELDOWN" switchToMelee
-bind ctrl spyResup1
+bind ctrl "spyResup1; switchingToCloakAndDagger"
 bind w "slot2"
 
 bind shift +toggleState
-alias +toggleState "alias nice_aim nice_shot; alias call call_help; alias thank good_work; alias  spyResup1 spyPreset0; alias switchToMelee secondary; alias disguise_scout friendly_scout; alias disguise_soldier friendly_soldier; alias disguise_pyro friendly_pyro; alias disguise_demo friendly_demo; alias disguise_heavy friendly_heavy; alias disguise_engy friendly_engy; alias disguise_medic friendly_medic; alias disguise_sniper friendly_sniper; alias disguise_spy friendly_spy"
-alias -toggleState "alias nice_aim nice_arrow; alias call call_medic; alias thank thanks; alias  spyResup1 spyPreset1; alias switchToMelee melee; alias disguise_scout enemy_scout; alias disguise_soldier enemy_soldier; alias disguise_pyro enemy_pyro; alias disguise_demo enemy_demo; alias disguise_heavy enemy_heavy; alias disguise_engy enemy_engy; alias disguise_medic enemy_medic; alias disguise_sniper enemy_sniper; alias disguise_spy enemy_spy"
+alias +toggleState "alias nice_aim nice_shot; alias call call_help; alias thank good_work; alias spyResup1 spyPreset0; alias switchToMelee secondary; alias switchingToCloakAndDagger say_team [DEBUG] switching to CloakAndDagger"
+alias -toggleState "alias nice_aim nice_arrow; alias call call_medic; alias thank thanks; alias spyResup1 spyPreset1; alias switchToMelee melee; alias switchingToCloakAndDagger say_team "
