--- a/overrides/medic.cfg
+++ b/overrides/medic.cfg
@@ -1,9 +1,13 @@
 exec overrides/reset
 exec overrides/toggleStates/toggleState0;
 
+bind "MWHEELUP" switchToSimplePrimary
+bind "MWHEELDOWN" switchToComplexSecondary
+bind "e" "+radar; voicemenu 2 0 "
+
 alias "autocall_default" "hud_medicautocallersthreshold 75.730003/Custom Threshold"
 alias "autocall_all" "hud_medicautocallersthreshold 150"
 alias "+radar" "autocall_all"
 alias "-radar" "autocall_default"
-
-bind "e" "+radar; voicemenu 2 0 "
+alias switchToSimplePrimary "slot1; bind mouse2 slot3"
+alias switchToComplexSecondary "switchToSecondary; bind mouse2 +attack2"
