--- a/overrides/spy.cfg
+++ b/overrides/spy.cfg
@@ -1,6 +1,7 @@
 exec overrides/reset
 exec overrides/toggleStates/spyState0;
 
+cl_hud_playerclass_use_playermodel 1
 bind "q" "lastdisguise" //this is for updating held weapon when disguised
 
 bind 1 disguise_scout
@@ -12,6 +13,13 @@ bind 6 disguise_engy
 bind 7 disguise_medic
 bind 8 disguise_sniper
 bind 9 disguise_spy
+
+bind CAPSLOCK toggleFriendlyDisguise;
+alias toggleFriendlyDisguise friendlyDisguises
+
+alias friendlyDisguises "alias disguise_scout friendly_scout; alias disguise_soldier friendly_soldier; alias disguise_pyro friendly_pyro; alias disguise_demo friendly_demo; alias disguise_heavy friendly_heavy; alias disguise_engy friendly_engy; alias disguise_medic friendly_medic; alias disguise_sniper friendly_sniper; alias disguise_spy friendly_spy; alias toggleFriendlyDisguise enemyDisguises"
+alias enemyDisguises "alias disguise_scout enemy_scout; alias disguise_soldier enemy_soldier; alias disguise_pyro enemy_pyro; alias disguise_demo enemy_demo; alias disguise_heavy enemy_heavy; alias disguise_engy enemy_engy; alias disguise_medic enemy_medic; alias disguise_sniper enemy_sniper; alias disguise_spy enemy_spy; alias toggleFriendlyDisguise friendlyDisguises"
+
 
 
 
