--- a/overrides/toggleStates/engyState1.cfg
+++ b/overrides/toggleStates/engyState1.cfg
@@ -1,9 +1,9 @@
 //debugging: say "switching to engy loadout 1 config"
 
 bind "MWHEELDOWN" switchToMelee
-bind ctrl engyResup1
+bind ctrl "engyResup1; switchingToSentry"
 bind w "slot2"
 
 bind shift +toggleState
-alias +toggleState "alias nice_aim nice_shot; alias call call_help; alias thank good_work; alias  engyResup1 engyPreset0; alias switchToMelee secondary; alias sentry destroy_sentry; alias dispenser destroy_dispenser; alias tele_entrance destroy_tele_entrance; alias tele_exit destroy_tele_exit"
-alias -toggleState "alias nice_aim nice_arrow; alias call call_medic; alias thank thanks; alias  engyResup1 engyPreset1; alias switchToMelee melee; alias sentry build_sentry; alias dispenser build_dispenser; alias tele_entrance build_tele_entrance; alias tele_exit build_tele_exit"
+alias +toggleState "alias nice_aim nice_shot; alias call call_help; alias thank good_work; alias  engyResup1 engyPreset0; alias switchToMelee secondary; alias sentry destroy_sentry; alias dispenser destroy_dispenser; alias tele_entrance destroy_tele_entrance; alias tele_exit destroy_tele_exit; alias switchingToSentry say_team [DEBUG] switching to sentry"
+alias -toggleState "alias nice_aim nice_arrow; alias call call_medic; alias thank thanks; alias  engyResup1 engyPreset1; alias switchToMelee melee; alias sentry build_sentry; alias dispenser build_dispenser; alias tele_entrance build_tele_entrance; alias tele_exit build_tele_exit; alias switchingToSentry say_team "
