--- a/overrides/toggleStates/toggleState0.cfg
+++ b/overrides/toggleStates/toggleState0.cfg
@@ -1,9 +1,9 @@
 //debug: say "executing loadout0 config"
 
 bind "MWHEELDOWN" switchToSecondary
-bind ctrl resup0
+bind ctrl "resup0; switchingToLoadout1"
 
 bind shift +toggleState
-alias +toggleState "alias nice_aim nice_shot; alias call call_help; alias thank good_work; alias resup0 preset1; alias switchToSecondary melee"
-alias -toggleState "alias nice_aim nice_arrow; alias call call_medic; alias thank thanks; alias resup0 preset0; alias switchToSecondary secondary"
+alias +toggleState "alias nice_aim nice_shot; alias call call_help; alias thank good_work; alias resup0 preset1; alias switchToSecondary melee; alias switchingToLoadout1 say_team switching to loadout 1"
+alias -toggleState "alias nice_aim nice_arrow; alias call call_medic; alias thank thanks; alias resup0 preset0; alias switchToSecondary secondary; alias switchingToLoadout1 say_team "
 
