--- a/overrides/toggleStates/toggleState1.cfg
+++ b/overrides/toggleStates/toggleState1.cfg
@@ -1,9 +1,9 @@
 //debug: say "executing loadout1 config"
 
 bind "MWHEELDOWN" switchToSecondary
-bind ctrl resup1
+bind ctrl "resup1; switchingToLoadout0"
 
 bind shift +toggleState
-alias +toggleState "alias nice_aim nice_shot; alias call call_help; alias thank good_work; alias resup1 preset0; alias switchToSecondary melee"
-alias -toggleState "alias nice_aim nice_arrow; alias call call_medic; alias thank thanks; alias resup1 preset1; alias switchToSecondary secondary"
+alias +toggleState "alias nice_aim nice_shot; alias call call_help; alias thank good_work; alias resup1 preset0; alias switchToSecondary melee; alias switchingToLoadout0 say_team switching to loadout 0"
+alias -toggleState "alias nice_aim nice_arrow; alias call call_medic; alias thank thanks; alias resup1 preset1; alias switchToSecondary secondary; alias switchingToLoadout0 say_team"
 
