overrides v2.3 - allows non crouched jump by holding shift

--- a/overrides/autoexec.cfg
+++ b/overrides/autoexec.cfg
@@ -97,42 +97,52 @@ alias "myserverPass" "password wafflesreignsupreme"
 alias rconSnake "rcon changelevel cp_snakewater_final1"
 alias rconBagel "rcon changelevel koth_bagel_rc5"
 alias rconClearcut "rcon changelevel koth_clearcut_b15d"
-alias rconProcess "rcon changelevel cp_process_f11"
+alias rconProcess "rcon changelevel cp_process_f12"
 alias rconSunshine "rcon changelevel cp_sunshine"
 alias rconReckoner "rcon changelevel cp_reckoner_rc6"
-alias rconMetal "rcon changelevel cp_metalworks_f4"
+alias rconMetal "rcon changelevel cp_metalworks_f5"
 alias rconGully "rcon changelevel cp_gullywash_f9"
 alias rconGranary "rcon changelevel cp_granary_pro_rc2"
 alias rconProduct "rcon changelevel koth_product_final"
 alias rconMge "rcon changelevel mge_training_v8_beta4b"
 alias rconMge2 "rcon changelevel mge_oihguv_sucks_a12"
 alias rconMge3 "rcon changelevel mge_oihguv_sucks_b5"
+alias rconMgeChilly "rcon changelevel mge_chillypunch_final4_fix2"
+alias rconSultry "rcon changelevel cp_sultry_b8"
 
 alias !rconSnake "say !rcon changelevel cp_snakewater_final1"
 alias !rconBagel "say !rcon changelevel koth_bagel_rc5"
 alias !rconClearcut "say !rcon changelevel koth_clearcut_b15d"
-alias !rconProcess "say !rcon changelevel cp_process_f11"
+alias !rconProcess "say !rcon changelevel cp_process_f12"
 alias !rconSunshine "say !rcon changelevel cp_sunshine"
 alias !rconReckoner "say !rcon changelevel cp_reckoner_rc6"
-alias !rconMetal "say !rcon changelevel cp_metalworks_f4"
+alias !rconMetal "say !rcon changelevel cp_metalworks_f5"
 alias !rconGully "say !rcon changelevel cp_gullywash_f9"
 alias !rconGranary "say !rcon changelevel cp_granary_pro_rc2"
 alias !rconProduct "say !rcon changelevel koth_product_final"
 alias !rconMge "say !rcon changelevel mge_training_v8_beta4b"
 alias !rconMge2 "say !rcon changelevel mge_oihguv_sucks_a12"
 alias !rconMge3 "say !rcon changelevel mge_oihguv_sucks_b5"
+alias !rconMgeChilly "say !rcon changelevel mge_chillypunch_final4_fix2"
+alias !rconSultry "say !rcon changelevel cp_sultry_b8"
 
 
 alias scrim "rcon exec rgl_6s_5cp_scrim"
 alias match1 "rcon exec rgl_6s_5cp_match_half1"
 alias match2 "rcon exec rgl_6s_5cp_match_half2"
-alias match3 "rcon exec rgl_6s_5cp_gc"
+alias matchGc "rcon exec rgl_6s_5cp_gc"
+alias matchPro "rcon exec rgl_6s_5cp_match_pro"
+alias matchImproved "rcon exec rgl_6s_5cp_improvedtimers"
+alias kothPro "rcon exec rgl_6s_koth_pro"
 alias koth "rcon exec rgl_6s_koth"
 
 alias !scrim "say !rcon exec rgl_6s_5cp_scrim"
 alias !match1 "say !rcon exec rgl_6s_5cp_match_half1"
 alias !match2 "say !rcon exec rgl_6s_5cp_match_half2"
-alias !match3 "say !rcon exec rgl_6s_5cp_gc"
+alias !matchGc "say !rcon exec rgl_6s_5cp_gc"
+alias !matchPro "say !rcon exec rgl_6s_5cp_match_pro"
+alias !matchImproved "say !rcon exec rgl_6s_5cp_improvedtimers"
+alias !kothPro "say !rcon exec rgl_6s_koth_pro"
 alias !koth "say !rcon exec rgl_6s_koth"
 
 alias win1 "rcon mp_winlimit 1"
@@ -184,20 +194,43 @@ alias time55 "rcon mp_timelimit 55"
 alias time60 "rcon mp_timelimit 60"
 
 alias !time5 "say !rcon mp_timelimit 5"
+alias !time6 "say !rcon mp_timelimit 6"
+alias !time7 "say !rcon mp_timelimit 7"
+alias !time8 "say !rcon mp_timelimit 8"
+alias !time9 "say !rcon mp_timelimit 9"
 alias !time10 "say !rcon mp_timelimit 10"
+alias !time11 "say !rcon mp_timelimit 11"
+alias !time12 "say !rcon mp_timelimit 12"
+alias !time13 "say !rcon mp_timelimit 13"
+alias !time14 "say !rcon mp_timelimit 14"
 alias !time15 "say !rcon mp_timelimit 15"
+alias !time16 "say !rcon mp_timelimit 16"
+alias !time17 "say !rcon mp_timelimit 17"
+alias !time18 "say !rcon mp_timelimit 18"
+alias !time19 "say !rcon mp_timelimit 19"
 alias !time20 "say !rcon mp_timelimit 20"
-
+alias !time21 "say !rcon mp_timelimit 21"
+alias !time22 "say !rcon mp_timelimit 22"
+alias !time23 "say !rcon mp_timelimit 23"
+alias !time24 "say !rcon mp_timelimit 24"
+alias !time25 "say !rcon mp_timelimit 25"
+alias !time30 "say !rcon mp_timelimit 30"
+alias !time35 "say !rcon mp_timelimit 35"
+alias !time40 "say !rcon mp_timelimit 40"
+alias !time45 "say !rcon mp_timelimit 45"
+alias !time50 "say !rcon mp_timelimit 50"
+alias !time55 "say !rcon mp_timelimit 55"
+alias !time60 "say !rcon mp_timelimit 60"
 
 
 alias snake "map cp_snakewater_final1"
 alias bagel "map koth_bagel_rc5"
 alias clearcut "map koth_clearcut_b15d"
 alias product "map koth_product_final"
-alias process "map cp_process_f11"
+alias process "map cp_process_f12"
 alias sunshine "map cp_sunshine"
 alias reckoner "map cp_reckoner_rc6"
-alias metal "map cp_metalworks_f4"
+alias metal "map cp_metalworks_f5"
 alias gully "map cp_gullywash_f9"
 alias granary "map cp_granary_pro_rc2"
 
@@ -206,6 +239,7 @@ bind b prec_mark
 bind "o" "explode"
 bind "l" "mp_tournament 1; sv_allow_wait_command 1; sv_cheats 1; net_fakelag 25; mp_restartgame_immediate 1; wait 900; hurtme -180"
 alias "fixSound" "snd_soundmixer Default_Mix"
+alias wait "mp_waitingforplayers_cancel 1"
 
 
 
