--- a/overrides/toggleStates/engyState0.cfg
+++ b/overrides/toggleStates/engyState0.cfg
@@ -5,5 +5,5 @@ bind ctrl "engyResup0; switchingToMini"
 bind w "slot2"
 
 bind shift +toggleState
-alias +toggleState "alias nice_aim nice_shot; alias call call_help; alias thank good_work; alias  engyResup0 engyPreset1; alias switchToMelee secondary; alias sentry destroy_sentry; alias dispenser destroy_dispenser; alias tele_entrance destroy_tele_entrance; alias tele_exit destroy_tele_exit; alias switchingToMini say_team [DEBUG] switching to mini sentry"
-alias -toggleState "alias nice_aim nice_arrow; alias call call_medic; alias thank thanks; alias  engyResup0 engyPreset0; alias switchToMelee melee; alias sentry build_sentry; alias dispenser build_dispenser; alias tele_entrance build_tele_entrance; alias tele_exit build_tele_exit; alias switchingToMini say_team "
+alias +toggleState "alias nice_aim nice_shot; alias call call_help; alias thank good_work; alias  engyResup0 engyPreset1; alias switchToMelee secondary; alias sentry destroy_sentry; alias dispenser destroy_dispenser; alias tele_entrance destroy_tele_entrance; alias tele_exit destroy_tele_exit; alias +dualJump +normalJump; alias -dualJump -normalJump; alias switchingToMini say_team [DEBUG] switching to mini sentry"
+alias -toggleState "alias nice_aim nice_arrow; alias call call_medic; alias thank thanks; alias  engyResup0 engyPreset0; alias switchToMelee melee; alias sentry build_sentry; alias dispenser build_dispenser; alias tele_entrance build_tele_entrance; alias tele_exit build_tele_exit; alias +dualJump +crouchJump; alias -dualJump -crouchJump; alias switchingToMini say_team "
