--- a/overrides/toggleStates/soldierToggleState0.cfg
+++ b/overrides/toggleStates/soldierToggleState0.cfg
@@ -4,5 +4,5 @@ bind "MWHEELDOWN" switchToMelee
 bind ctrl "soldierResup0; switchingToShotgun"
 
 bind shift +toggleState
-alias +toggleState "alias nice_aim nice_shot; alias call call_help; alias thank good_work; alias soldierResup0 soldierPreset1; alias switchToMelee secondary; alias switchingToShotgun say_team [DEBUG] switching to shotgun soldier"
-alias -toggleState "alias nice_aim nice_arrow; alias call call_medic; alias thank thanks; alias soldierResup0 soldierPreset0; alias switchToMelee melee; alias switchingToShotgun say_team "
+alias +toggleState "alias nice_aim nice_shot; alias call call_help; alias thank good_work; alias soldierResup0 soldierPreset1; alias switchToMelee secondary; alias +dualJump +normalJump; alias -dualJump -normalJump; alias switchingToShotgun say_team [LOG] switching to shotgun soldier"
+alias -toggleState "alias nice_aim nice_arrow; alias call call_medic; alias thank thanks; alias soldierResup0 soldierPreset0; alias switchToMelee melee; alias +dualJump +crouchJump; alias -dualJump -crouchJump; alias switchingToShotgun say_team "
