--- a/overrides/toggleStates/toggleStateParams.cfg
+++ b/overrides/toggleStates/toggleStateParams.cfg
@@ -23,6 +23,17 @@ alias switchToMelee melee
 alias secondary "slot2"
 alias melee "slot3"
 
+bind "space" "+dualJump"
+alias "+dualJump" "+crouchJump"
+alias "-dualJump" "-crouchJump"
+alias "+crouchJump" "+jumpFunction"
+alias "-crouchJump" "-jumpFunction"
+alias "+normalJump" "+jump"
+alias "-normalJump" "-jumpFunction"
+
+//alias crouchJump "say crouchJump"
+//alias normalJump "say normalJump"
+
 // SOLDIER //
 alias soldierResup0  soldierPreset0
 alias soldierResup1  soldierPreset1
