--- a/overrides/toggleStates/spyState1.cfg
+++ b/overrides/toggleStates/spyState1.cfg
@@ -5,5 +5,5 @@ bind ctrl "spyResup1; switchingToCloakAndDagger"
 bind w "slot2"
 
 bind shift +toggleState
-alias +toggleState "alias nice_aim nice_shot; alias call call_help; alias thank good_work; alias spyResup1 spyPreset0; alias switchToMelee secondary; alias switchingToCloakAndDagger say_team [DEBUG] switching to CloakAndDagger"
-alias -toggleState "alias nice_aim nice_arrow; alias call call_medic; alias thank thanks; alias spyResup1 spyPreset1; alias switchToMelee melee; alias switchingToCloakAndDagger say_team "
+alias +toggleState "alias nice_aim nice_shot; alias call call_help; alias thank good_work; alias spyResup1 spyPreset0; alias switchToMelee secondary; alias +dualJump +normalJump; alias -dualJump -normalJump; alias switchingToCloakAndDagger say_team [DEBUG] switching to CloakAndDagger"
+alias -toggleState "alias nice_aim nice_arrow; alias call call_medic; alias thank thanks; alias spyResup1 spyPreset1; alias switchToMelee melee; alias +dualJump +crouchJump; alias -dualJump -crouchJump; alias switchingToCloakAndDagger say_team "
