overrides v2.4 - enables shift + m2 to switch to melee on all classes (notably important on medic and demo)

--- a/overrides/toggleStates/toggleStateParams.cfg
+++ b/overrides/toggleStates/toggleStateParams.cfg
@@ -23,6 +23,12 @@ alias switchToMelee melee
 alias secondary "slot2"
 alias melee "slot3"
 
+alias +rightClick +altFire
+alias -rightClick -altFire
+alias +altFire "+attack2"
+alias -altFire "-attack2"
+
+
 bind "space" "+dualJump"
 alias "+dualJump" "+crouchJump"
 alias "-dualJump" "-crouchJump"
