--- a/overrides/medic.cfg
+++ b/overrides/medic.cfg
@@ -10,4 +10,4 @@ alias "autocall_all" "hud_medicautocallersthreshold 150"
 alias "+radar" "autocall_all"
 alias "-radar" "autocall_default"
 alias switchToSimplePrimary "slot1; bind mouse2 slot3"
-alias switchToComplexSecondary "switchToSecondary; bind mouse2 +attack2"
+alias switchToComplexSecondary "switchToSecondary; bind mouse2 +rightClick"
