--- a/overrides/reset.cfg
+++ b/overrides/reset.cfg
@@ -1,5 +1,5 @@
 bind "mouse5" "+duck"
-bind "mouse2" "+attack2"
+bind "mouse2" +rightClick
 bind "mouse1" "+attack"
 bind "3" "slot3"
 bind w "slot3"
