--- a/overrides/toggleStates/toggleState0.cfg
+++ b/overrides/toggleStates/toggleState0.cfg
@@ -4,6 +4,6 @@ bind "MWHEELDOWN" switchToSecondary
 bind ctrl "resup0; switchingToLoadout1"
 
 bind shift +toggleState
-alias +toggleState "alias nice_aim nice_shot; alias call call_help; alias thank good_work; alias resup0 preset1; alias switchToSecondary melee; alias +dualJump +normalJump; alias -dualJump -normalJump; alias switchingToLoadout1 say_team switching to loadout 1"
-alias -toggleState "alias nice_aim nice_arrow; alias call call_medic; alias thank thanks; alias resup0 preset0; alias switchToSecondary secondary; alias +dualJump +crouchJump; alias -dualJump -crouchJump; alias switchingToLoadout1 say_team "
+alias +toggleState "alias nice_aim nice_shot; alias call call_help; alias thank good_work; alias resup0 preset1; alias switchToSecondary melee; alias +dualJump +normalJump; alias -dualJump -normalJump; alias +rightClick melee; alias switchingToLoadout1 say_team switching to loadout 1"
+alias -toggleState "alias nice_aim nice_arrow; alias call call_medic; alias thank thanks; alias resup0 preset0; alias switchToSecondary secondary; alias +dualJump +crouchJump; alias -dualJump -crouchJump; alias +rightClick +altFire; alias switchingToLoadout1 say_team "
 
