overrides v2.5 - fixed 'wait' alias, improved logging for loadout switching

--- a/overrides/autoexec.cfg
+++ b/overrides/autoexec.cfg
@@ -239,7 +239,7 @@ bind b prec_mark
 bind "o" "explode"
 bind "l" "mp_tournament 1; sv_allow_wait_command 1; sv_cheats 1; net_fakelag 25; mp_restartgame_immediate 1; wait 900; hurtme -180"
 alias "fixSound" "snd_soundmixer Default_Mix"
-alias wait "mp_waitingforplayers_cancel 1"
+alias waitCancel "mp_waitingforplayers_cancel 1"
 
 
 
