--- a/overrides/toggleStates/soldierToggleState1.cfg
+++ b/overrides/toggleStates/soldierToggleState1.cfg
@@ -4,5 +4,5 @@ bind "MWHEELDOWN" switchToSecondary
 bind ctrl "soldierResup1; switchingToGunboats"
 
 bind shift +toggleState
-alias +toggleState "alias nice_aim nice_shot; alias call call_help; alias thank good_work; alias soldierResup1 soldierPreset0; alias switchToSecondary melee; alias +dualJump +normalJump; alias -dualJump -normalJump; alias switchingToGunboats say_team [LOG] switching to gunboats"
-alias -toggleState "alias nice_aim nice_arrow; alias call call_medic; alias thank thanks; alias soldierResup1 soldierPreset1; alias switchToSecondary secondary; alias +dualJump +crouchJump; alias -dualJump -crouchJump; alias switchingToGunboats say_team "
+alias +toggleState "alias nice_aim nice_shot; alias call call_help; alias thank good_work; alias soldierResup1 soldierPreset0; alias switchToSecondary melee; alias +dualJump +normalJump; alias -dualJump -normalJump; alias switchingToGunboats echo [LOG] switching to gunboats "
+alias -toggleState "alias nice_aim nice_arrow; alias call call_medic; alias thank thanks; alias soldierResup1 soldierPreset1; alias switchToSecondary secondary; alias +dualJump +crouchJump; alias -dualJump -crouchJump; alias switchingToGunboats echo "
