--- a/overrides/toggleStates/spyState0.cfg
+++ b/overrides/toggleStates/spyState0.cfg
@@ -5,5 +5,5 @@ bind ctrl "spyResup0; switchingToInvisWatch"
 bind w "slot2"
 
 bind shift +toggleState
-alias +toggleState "alias nice_aim nice_shot; alias call call_help; alias thank good_work; alias spyResup0 spyPreset1; alias switchToMelee secondary; alias +dualJump +normalJump; alias -dualJump -normalJump; alias switchingToInvisWatch say_team [DEBUG] switching to InvisWatch"
-alias -toggleState "alias nice_aim nice_arrow; alias call call_medic; alias thank thanks; alias spyResup0 spyPreset0; alias switchToMelee melee; alias +dualJump +crouchJump; alias -dualJump -crouchJump; alias switchingToInvisWatch say_team "
+alias +toggleState "alias nice_aim nice_shot; alias call call_help; alias thank good_work; alias spyResup0 spyPreset1; alias switchToMelee secondary; alias +dualJump +normalJump; alias -dualJump -normalJump; alias switchingToInvisWatch echo [LOG] switching to InvisWatch"
+alias -toggleState "alias nice_aim nice_arrow; alias call call_medic; alias thank thanks; alias spyResup0 spyPreset0; alias switchToMelee melee; alias +dualJump +crouchJump; alias -dualJump -crouchJump; alias switchingToInvisWatch echo "
