Overides v2.6 - fixed spectator binds, probably tweaked other stuff that ive forgotten about

--- a/overrides/autoexec.cfg
+++ b/overrides/autoexec.cfg
@@ -1,5 +1,6 @@
 //defines the functions controlled by the toggleState bind
 exec overrides/toggleStates/toggleStateParams
+exec overrides/reset
 
 //personal binds
 bind d +mfwd
@@ -57,7 +58,7 @@ alias ViewModelsOff "r_drawviewmodel 0; alias toggleViewModels ViewModelsOn"
 alias ViewModelsOn "r_drawviewmodel 1; alias toggleViewModels ViewModelsOff"
 
 //custom crouch jumps -----------------------------------------------------------------
-alias +jumpDuck "+jump; +duck"
+alias +jumpDuck "+jump; +duck; spec_mode"
 alias -jumpDuck "-jump; -duck"
 
 alias +jumpFunction +jumpDuck
@@ -88,6 +89,7 @@ alias "rconPass" "rcon_password pancakesreignsupreme"
 
 
 alias pboys "connect 74.91.119.87:27015; password yoyoyo"
+alias xanax "connect 74.91.122.129; password SCR1NGUS
 alias "c2w" "connect ctap.game.nfoservers.com:27015; password seedy"
 alias "c2wrconPass" "rcon_password tecolote13"
 
@@ -95,36 +97,37 @@ alias "c2wrconPass" "rcon_password tecolote13"
 alias "myserverPass" "password wafflesreignsupreme"
 
 alias rconSnake "rcon changelevel cp_snakewater_final1"
-alias rconBagel "rcon changelevel koth_bagel_rc5"
-alias rconClearcut "rcon changelevel koth_clearcut_b15d"
-alias rconProcess "rcon changelevel cp_process_f12"
-alias rconSunshine "rcon changelevel cp_sunshine"
-alias rconReckoner "rcon changelevel cp_reckoner_rc6"
-alias rconMetal "rcon changelevel cp_metalworks_f5"
-alias rconGully "rcon changelevel cp_gullywash_f9"
-alias rconGranary "rcon changelevel cp_granary_pro_rc2"
-alias rconProduct "rcon changelevel koth_product_final"
-alias rconMge "rcon changelevel mge_training_v8_beta4b"
-alias rconMge2 "rcon changelevel mge_oihguv_sucks_a12"
-alias rconMge3 "rcon changelevel mge_oihguv_sucks_b5"
-alias rconMgeChilly "rcon changelevel mge_chillypunch_final4_fix2"
-alias rconSultry "rcon changelevel cp_sultry_b8"
-
 alias !rconSnake "say !rcon changelevel cp_snakewater_final1"
-alias !rconBagel "say !rcon changelevel koth_bagel_rc5"
+alias rconBagel "rcon changelevel koth_bagel_rc7"
+alias !rconBagel "say !rcon changelevel koth_bagel_rc7"
+alias rconClearcut "rcon changelevel koth_clearcut_b15d"
 alias !rconClearcut "say !rcon changelevel koth_clearcut_b15d"
+alias rconProcess "rcon changelevel cp_process_f12"
 alias !rconProcess "say !rcon changelevel cp_process_f12"
+alias rconSunshine "rcon changelevel cp_sunshine"
 alias !rconSunshine "say !rcon changelevel cp_sunshine"
+alias rconReckoner "rcon changelevel cp_reckoner_rc6"
 alias !rconReckoner "say !rcon changelevel cp_reckoner_rc6"
-alias !rconMetal "say !rcon changelevel cp_metalworks_f5"
+alias rconMetal "rcon changelevel cp_metalworks_f5p"
+alias !rconMetal "say !rcon changelevel cp_metalworks_f5p"
+alias rconGully "rcon changelevel cp_gullywash_f9"
 alias !rconGully "say !rcon changelevel cp_gullywash_f9"
+alias rconGranary "rcon changelevel cp_granary_pro_rc2"
 alias !rconGranary "say !rcon changelevel cp_granary_pro_rc2"
+alias rconProduct "rcon changelevel koth_product_final"
 alias !rconProduct "say !rcon changelevel koth_product_final"
+alias rconMge "rcon changelevel mge_training_v8_beta4b"
 alias !rconMge "say !rcon changelevel mge_training_v8_beta4b"
+alias rconMge2 "rcon changelevel mge_oihguv_sucks_a12"
 alias !rconMge2 "say !rcon changelevel mge_oihguv_sucks_a12"
+alias rconMge3 "rcon changelevel mge_oihguv_sucks_b5"
 alias !rconMge3 "say !rcon changelevel mge_oihguv_sucks_b5"
+alias rconMgeChilly "rcon changelevel mge_chillypunch_final4_fix2"
 alias !rconMgeChilly "say !rcon changelevel mge_chillypunch_final4_fix2"
+alias rconSultry "rcon changelevel cp_sultry_b8"
 alias !rconSultry "say !rcon changelevel cp_sultry_b8"
+
+
 
 
 alias scrim "rcon exec rgl_6s_5cp_scrim"
