--- a/overrides/demoman.cfg
+++ b/overrides/demoman.cfg
@@ -1,6 +1,8 @@
 exec overrides/reset
 exec overrides/toggleStates/toggleState0;
 
+alias execCurrentClassCfg "exec overrides/demoman"
+
 hud_combattext_batching 1
 
 
