--- a/overrides/heavyweapons.cfg
+++ b/overrides/heavyweapons.cfg
@@ -1,4 +1,6 @@
 exec overrides/reset
 exec overrides/toggleStates/toggleState0;
 
+alias execCurrentClassCfg "exec overrides/heavyweapons"
+
 hud_combattext_batching 1
