--- a/overrides/medic.cfg
+++ b/overrides/medic.cfg
@@ -1,6 +1,8 @@
 exec overrides/reset
 exec overrides/toggleStates/toggleState0;
 
+alias execCurrentClassCfg "exec overrides/medic"
+
 bind "MWHEELUP" switchToSimplePrimary
 bind "MWHEELDOWN" switchToComplexSecondary
 bind "e" "+radar; voicemenu 2 0 "
