--- a/overrides/scout.cfg
+++ b/overrides/scout.cfg
@@ -4,8 +4,10 @@ exec overrides/toggleStates/toggleState0;
 alias batchDamage "slot2; hud_combattext_batching 1"
 alias unbatchDamage "slot1; hud_combattext_batching 0"
 
+alias execCurrentClassCfg "exec overrides/scout"
+
 //reminder, this will mess up wrap assasin. Code pressing mouse2 to rebind to attack2, then MWUp and MWDown to reset to slot3
-bind mouse2 slot3
+bind mouse2 weapon3
 
 //bind "MWHEELUP" unbatchDamage
 //bind "MWHEELDOWN" batchDamage
