--- a/overrides/toggleStates/toggleState0.cfg
+++ b/overrides/toggleStates/toggleState0.cfg
@@ -1,7 +1,7 @@
 //debug: say "executing loadout0 config"
 
 bind "MWHEELDOWN" switchToSecondary
-bind ctrl "resup0; switchingToLoadout1"
+bind ctrl "resup0; switchingToLoadout1; execCurrentClassCfg"
 
 bind shift +toggleState
 alias +toggleState "alias nice_aim nice_shot; alias call call_help; alias thank good_work; alias resup0 preset1; alias switchToSecondary melee; alias +dualJump +normalJump; alias -dualJump -normalJump; alias +rightClick melee; alias switchingToLoadout1 echo [LOG] switching to loadout 1"
