--- a/overrides/pyro.cfg
+++ b/overrides/pyro.cfg
@@ -4,6 +4,8 @@ exec overrides/toggleStates/toggleState0;
 alias batchDamage1 "slot1; hud_combattext_batching 1"
 alias batchDamage2 "slot2; hud_combattext_batching 1"
 
+alias execCurrentClassCfg "exec overrides/pyro"
+
 //bind "MWHEELUP" batchDamage1
 //bind "MWHEELDOWN" batchDamage2
 
