--- a/overrides/toggleStates/toggleState1.cfg
+++ b/overrides/toggleStates/toggleState1.cfg
@@ -1,7 +1,7 @@
 //debug: say "executing loadout1 config"
 
 bind "MWHEELDOWN" switchToSecondary
-bind ctrl "resup1; switchingToLoadout0"
+bind ctrl "resup1; switchingToLoadout0; execCurrentClassCfg"
 
 bind shift +toggleState
 alias +toggleState "alias nice_aim nice_shot; alias call call_help; alias thank good_work; alias resup1 preset0; alias switchToSecondary melee; alias +dualJump +normalJump; alias -dualJump -normalJump; alias +rightClick melee; alias switchingToLoadout0 echo [LOG] switching to loadout 0"
