--- a/overrides/toggleStates/toggleStateParams.cfg
+++ b/overrides/toggleStates/toggleStateParams.cfg
@@ -21,12 +21,14 @@ alias preset1 "load_itempreset 1; exec overrides/toggleStates/toggleState1"
 alias switchToSecondary secondary
 alias switchToMelee melee
 alias secondary "slot2"
-alias melee "slot3"
+alias melee "slot3; spec_prev"
 
 alias +rightClick +altFire
 alias -rightClick -altFire
-alias +altFire "+attack2"
+alias +altFire "+attack2; spec_prev"
 alias -altFire "-attack2"
+
+alias weapon3 "slot3; spec_prev"
 
 
 bind "space" "+dualJump"
