added record cfg and new spy disguise binds

--- a/overrides/scout.cfg
+++ b/overrides/scout.cfg
@@ -15,7 +15,7 @@ bind mouse2 weapon3
 alias permaCrouch crouchHold
 alias crouchHold "+duck; alias permaCrouch crouchRelease"
 alias crouchRelease "-duck; alias permaCrouch crouchHold"
-bind j permaCrouch
+//bind j permaCrouch
 
 //how to hold crouch:
 //bind "MWHEELDOWN" crouchHold
