--- a/overrides/spy.cfg
+++ b/overrides/spy.cfg
@@ -3,18 +3,49 @@ exec overrides/toggleStates/spyState0;
 
 cl_hud_playerclass_use_playermodel 1
 bind "q" "lastdisguise" //this is for updating held weapon when disguised
+bind 4 slot4
+bind "MWHEELDOWN" switchToMelee
+bind w "slot2"
 
-bind 1 disguise_scout
-bind 2 disguise_soldier
-bind 3 disguise_pyro
-bind 4 disguise_demo
-bind 5 disguise_heavy
-bind 6 disguise_engy
-bind 7 disguise_medic
-bind 8 disguise_sniper
-bind 9 disguise_spy
+//experimental disguise system
 
-bind CAPSLOCK toggleFriendlyDisguise;
+bind 1 disguiseAttack
+bind 2 disguiseDefense
+bind 3 disguiseSupport
+
+bind CAPSLOCK +toggleTeam
+
+alias disguiseAttack openAttackDisguise
+alias disguiseDefense openDefenseDisguise
+alias disguiseSupport openSupportDisguise
+
+alias openAttackDisguise "alias disguiseAttack enemy_scout; alias disguiseDefense enemy_soldier; alias disguiseSupport enemy_pyro"
+alias openDefenseDisguise "alias disguiseAttack enemy_demo; alias disguiseDefense enemy_heavy; alias disguiseSupport enemy_engy"
+alias openSupportDisguise "alias disguiseAttack enemy_medic; alias disguiseDefense enemy_sniper; alias disguiseSupport enemy_spy"
+
+alias openFriendlyAttackDisguise "alias disguiseAttack friendly_scout; alias disguiseDefense friendly_soldier; alias disguiseSupport friendly_pyro"
+alias openFriendlyDefenseDisguise "alias disguiseAttack friendly_demo; alias disguiseDefense friendly_heavy; alias disguiseSupport friendly_engy"
+alias openFriendlySupportDisguise "alias disguiseAttack friendly_medic; alias disguiseDefense friendly_sniper; alias disguiseSupport friendly_spy"
+
+alias +toggleTeam "alias disguiseAttack openFriendlyAttackDisguise; alias disguiseDefense openFriendlyDefenseDisguise; alias disguiseSupport openFriendlySupportDisguise"
+alias -toggleTeam "alias disguiseAttack openAttackDisguise; alias disguiseDefense openDefenseDisguise; alias disguiseSupport openSupportDisguise"
+
+
+
+
+
+//OLD DISGUISE SYSTEM ↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓
+//bind 1 disguise_scout
+//bind 2 disguise_soldier
+//bind 3 disguise_pyro
+//bind 4 disguise_demo
+//bind 5 disguise_heavy
+//bind 6 disguise_engy
+//bind 7 disguise_medic
+//bind 8 disguise_sniper
+//bind 9 disguise_spy
+
+//bind CAPSLOCK toggleFriendlyDisguise;
 alias toggleFriendlyDisguise friendlyDisguises
 
 alias friendlyDisguises "alias disguise_scout friendly_scout; alias disguise_soldier friendly_soldier; alias disguise_pyro friendly_pyro; alias disguise_demo friendly_demo; alias disguise_heavy friendly_heavy; alias disguise_engy friendly_engy; alias disguise_medic friendly_medic; alias disguise_sniper friendly_sniper; alias disguise_spy friendly_spy; alias toggleFriendlyDisguise enemyDisguises"
