--- a/overrides/autoexec.cfg
+++ b/overrides/autoexec.cfg
@@ -57,6 +57,8 @@ alias toggleViewModels viewModelsOff
 alias ViewModelsOff "r_drawviewmodel 0; alias toggleViewModels ViewModelsOn"
 alias ViewModelsOn "r_drawviewmodel 1; alias toggleViewModels ViewModelsOff"
 
+bind j "mp_waitingforplayers_cancel 1"
+
 //custom crouch jumps -----------------------------------------------------------------
 alias +jumpDuck "+jump; +duck; spec_mode"
 alias -jumpDuck "-jump; -duck"
@@ -87,7 +89,8 @@ alias "myServerPass" "wafflesreignsupreme"
 alias "myServer" "connect 169.254.4.215:7120; password "wafflesreignsupreme""
 alias "rconPass" "rcon_password pancakesreignsupreme"
 
-
+alias jagMatch "connect 74.91.115.223:27015; password aaa"
+alias jag "connect 74.91.115.223:27015; password lessqqmorepewpew"
 alias pboys "connect 74.91.119.87:27015; password yoyoyo"
 alias xanax "connect 74.91.122.129; password SCR1NGUS
 alias "c2w" "connect ctap.game.nfoservers.com:27015; password seedy"
@@ -238,7 +241,10 @@ alias gully "map cp_gullywash_f9"
 alias granary "map cp_granary_pro_rc2"
 
 //bind "ctrl" "load_itempreset 0" og resup bind
-bind b prec_mark
+//alias start_record "exec overrides/record"
+//alias end_record stop
+//alias record start_record
+bind b "exec overrides/record"
 bind "o" "explode"
 bind "l" "mp_tournament 1; sv_allow_wait_command 1; sv_cheats 1; net_fakelag 25; mp_restartgame_immediate 1; wait 900; hurtme -180"
 alias "fixSound" "snd_soundmixer Default_Mix"
