--- a/overrides/toggleStates/toggleStateParams.cfg
+++ b/overrides/toggleStates/toggleStateParams.cfg
@@ -13,6 +13,11 @@ alias thank thanks
 alias thanks "voicemenu 0 1"
 alias good_work "voicemenu 2 7"
 
+bind b record
+alias record startRecording
+alias startRecording "exec overrides/record"
+alias stopRecording "stop"
+
 alias resup0 preset0
 alias resup1 preset1
 alias preset0 "load_itempreset 0; exec overrides/toggleStates/toggleState0"
@@ -76,39 +81,41 @@ alias spyResup1 spyPreset1
 alias spyPreset0 "load_itempreset 0; exec overrides/toggleStates/spyState0"
 alias spyPreset1 "load_itempreset 1; exec overrides/toggleStates/spyState1"
 
+alias resetDisguiseBinds "alias disguiseAttack openAttackDisguise; alias disguiseDefense openDefenseDisguise; alias disguiseSupport openSupportDisguise;"
+
 alias disguise_scout enemy_scout
-alias enemy_scout "disguise 1 -1; disguise 1 -1;"
-alias friendly_scout "disguise 1 -2; disguise 1 -2;"
+alias enemy_scout "disguise 1 -1; disguise 1 -1; resetDisguiseBinds"
+alias friendly_scout "disguise 1 -2; disguise 1 -2; resetDisguiseBinds"
 
 alias disguise_soldier enemy_soldier
-alias enemy_soldier "disguise 3 -1; disguise 3 -1;"
-alias friendly_soldier "disguise 3 -2; disguise 3 -2;"
+alias enemy_soldier "disguise 3 -1; disguise 3 -1; resetDisguiseBinds"
+alias friendly_soldier "disguise 3 -2; disguise 3 -2; resetDisguiseBinds"
 
 alias disguise_pyro enemy_pyro
-alias enemy_pyro "disguise 7 -1; disguise 7 -1;"
-alias friendly_pyro "disguise 7 -2; disguise 7 -2;"
+alias enemy_pyro "disguise 7 -1; disguise 7 -1; resetDisguiseBinds"
+alias friendly_pyro "disguise 7 -2; disguise 7 -2; resetDisguiseBinds"
 
 alias disguise_demo enemy_demo
-alias enemy_demo "disguise 4 -1; disguise 4 -1;"
-alias friendly_demo "disguise 4 -2; disguise 4 -2;"
+alias enemy_demo "disguise 4 -1; disguise 4 -1; resetDisguiseBinds"
+alias friendly_demo "disguise 4 -2; disguise 4 -2; resetDisguiseBinds"
 
 alias disguise_heavy enemy_heavy
-alias enemy_heavy "disguise 6 -1; disguise 6 -1;"
-alias friendly_heavy "disguise 6 -2; disguise 6 -2;"
+alias enemy_heavy "disguise 6 -1; disguise 6 -1; resetDisguiseBinds"
+alias friendly_heavy "disguise 6 -2; disguise 6 -2; resetDisguiseBinds"
 
 alias disguise_engy enemy_engy
-alias enemy_engy "disguise 9 -1; disguise 9 -1;"
-alias friendly_engy "disguise 9 -2; disguise 9 -2;"
+alias enemy_engy "disguise 9 -1; disguise 9 -1; resetDisguiseBinds"
+alias friendly_engy "disguise 9 -2; disguise 9 -2; resetDisguiseBinds"
 
 alias disguise_medic enemy_medic
-alias enemy_medic "disguise 5 -1; disguise 5 -1;"
-alias friendly_medic "disguise 5 -2; disguise 5 -2;"
+alias enemy_medic "disguise 5 -1; disguise 5 -1; resetDisguiseBinds"
+alias friendly_medic "disguise 5 -2; disguise 5 -2; resetDisguiseBinds"
 
 alias disguise_sniper enemy_sniper
-alias enemy_sniper "disguise 2 -1; disguise 2 -1;"
-alias friendly_sniper "disguise 2 -2; disguise 2 -2;"
+alias enemy_sniper "disguise 2 -1; disguise 2 -1; resetDisguiseBinds"
+alias friendly_sniper "disguise 2 -2; disguise 2 -2; resetDisguiseBinds"
 
 alias disguise_spy enemy_spy
-alias enemy_spy "disguise 8 -1; disguise 8 -1;"
-alias friendly_spy "disguise 8 -2; disguise 8 -2;"
+alias enemy_spy "disguise 8 -1; disguise 8 -1; resetDisguiseBinds"
+alias friendly_spy "disguise 8 -2; disguise 8 -2; resetDisguiseBinds"
 
